Enable preview features in maven surefire plugin to allow usage of Classfile API